fixed header being not centered

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+#header
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 table
 {
     font-family: 'Metropolis-Medium', sans-serif;
